--- a/index.html
+++ b/index.html
@@ -44,18 +44,16 @@
 		<li><a href="#Ricky">Ricky's Choice</a>              
  		<li><a href="#Mimi">Mimi's favorite language</a> 
 		<li><a href="#Hamid">Hamid's Language Choice</a>           
-        <li><a href="#Nichelle">Nichelle's Language choice</a> 
+        	<li><a href="#Nichelle">Nichelle's Language choice</a> 
  		<li><a href="#Jesse">Jesse's Favorite language</a> 		
 	</ul>
-  </div>   
-                
-		<br>		
+  </div> <br>              		
 	<article>
 		<h3 id="Ricky">Ricky's Choice</h3>
 		<p>	
 			HTML, while not technically a programming language, is a crucial element to any web-based project and is often the first step of the journey to learning programming. Generally put, HTML is used to build the basic structure of the webpage/application. It works in conjunction with programming languages as well as CSS to provide the structure and flow of your webpage, as well as guide its functionality.
-        </p>
-        <p>
+        	</p>
+        	<p>
 		Like stated before, HTML itself does not pass as a programming language on its own. This is because it does not unilaterally perform tasks central to programming, such as creating If/Else statements, declaring variables, writing functions, modifying data or producing output to name a few. Instead, HTML will provide the foundation of the interface used to complete many of these tasks.<br><br> A few examples of these:
 			 <form>
   			<label><strong>Text/Input box:</strong> HTML elements can be utilized to take the input for an embedded scripting function.</label><br>
@@ -65,12 +63,10 @@
             <label><strong>Radio Buttons:</strong> With radio buttons, a language like JavaScript can utilize the associated values to perform a function.</label><br>
             <input type="radio">
  		  </form>
-			</p>
-            <p>
-			
-
-			In the examples above, we can see that while the HTML elements themselves are not responsible for the programming logic that is occurring, their use is still central to the task being performed. It would not be possible for the programmer who created this code to not have at least a working knowledge of HTML in order to employ their programming script.
-			</p>
+		</p>
+            	<p>			
+		In the examples above, we can see that while the HTML elements themselves are not responsible for the programming logic that is occurring, their use is still central to the task being performed. It would not be possible for the programmer who created this code to not have at least a working knowledge of HTML in order to employ their programming script.
+		</p>
 	</article>
 	<article>
 		<h3 id="Mimi">Mimi's Favorite Language: SQL</h3>
