--- a/index.html
+++ b/index.html
@@ -74,18 +74,41 @@
 	</article>
 	<article>
 		<h3 id="Mimi">Mimi's Favorite Language: SQL</h3>
-		<h4>What this language is used for:</h4>
+		
+		<h4>With the growth of Information Technology, the volume of data produced each day is astonishing. You could say we are overwhelmed with data. And, what good is that data unless we can manage it and manipulate it and understand it? SQL helps us do just that.</h4>
+		
+		<h4>Berkley Extension</h4>
+		<h3>What SQL is used for:</h3>
 		<ul>
 		<li>Database management</li> 
 		<li>Sales reports</li> 
 		<li>Business management</li>
 		</ul>
-		
-		<p>According to Berkley Extension, SQL, or Structured Query Language, is a language that allows programmers to query and manipulate databases. As a domain-specific language, it is designed mainly for managing data within an RDBMS (relational database management system). Put simply, SQL can locate and retrieve data from a database, as well as update, add or remove records.</p>
+		<p>SQL, or Structured Query Language, is a language that allows programmers to query and manipulate databases. As a domain-specific language, it is designed mainly for managing data within an RDBMS (relational database management system). Put simply, SQL can locate and retrieve data from a database, as well as update, add or remove records.</p>
 		<p>While SQL is highly functional, it tends to work better with small databases and doesn’t always lend itself to managing expansive ones.</p> 
 		<p>That said, SQL still ranks as the third-most-used language in the programming industry, with over half (54.7%) of surveyed developers reporting that they use it.</p>
-		<h4>Mimi's Input</h4>
-		<p>With the growth of Information Technology, the volume of data produced each day is astonishing. You could say we are overwhelmed with data. And, what good is that data unless we can manage it and manipulate it and understand it? SQL helps us do just that.</p> 
+		<p><a href="https://bootcamp.berkeley.edu/blog/most-in-demand-programming-languages/">Read more</a></p>
+		
+		<h4>Codesight</h4>
+		<p>The advantages of learning SQL are:</p>
+		<ul>
+		<li>it's a universal language</li> 
+		<li>it's open source - easy to learn, use</li> 
+		<li>it can be used to manage millions of rows of data</li>
+		<li>technology evolution - every PC or individual with access to some kind of mechanical device eventually touches SQL</li>
+		</ul>
+		<p>SQL is magnificently essential and valuable skill businesses desire. Almost every business has become digitized. Digital means data – data rises to databases, and, to be responsible to those databases, you require SQL. Read any business journal and you will see something about analytics or business intelligence (BI). As companies strive to accomplish more with their information, they will require more people with the skills to access and analyze that data. SQL is the key skill that empowers you to do that.</p>
+		<p><a href="https://codingsight.com/structured-query-language-importance-of-learning-sql/">Read more</a></p>
+		 
+		<h4>hackr.io</h4>
+		<p>When listing the best programming languages to learn in 2022, hackr.io lists: 1. Python, 2. Java, 3. C / C ++, 4. Golang (orGo), 5. JavaScript, 6. R, 7. Swift, 8. PHP, 9. C#, 10. MATLAB</p>
+		<p> Your choice of which programming language to learn will depend on your career goals. For example, if you want to dive into machine learning and deep learning, then you shouldn’t be spending your time learning Java or C#. To help you make this decision, we’ll briefly go over some of the languages and what they’re used for.</p>
+		<p>Python and JavaScript, two of the most popular languages, are hot in the startup world. Many startups use Django (Python), Flask (Python), and NodeJS (JavaScript) as their backend frameworks. These are both easy-to-learn and therefore considered the best programming languages to learn for beginners. On top of that, there are several opportunities in the market for these roles.</p> 
+		<p>Java and PHP are commonly used in the corporate world. Many organizations use Spring (Java) and Codeigniter (PHP) as their web backend framework.</p>
+		<p>R and MATLAB have a large presence in the data analytics world. If you want to develop a career in data analytics or data science, these are the languages to learn. C/C++ and Golang are the top choices in building low-latency and scalable systems.</
+		<p>With this, hopefully you have an answer to the question of which programming language to learn. Your goal should be to settle on a language and work on projects that have relevance to your career goals. It’ll take effort, but it’s also very rewarding!</p>
+		<p> SQL does not make the list SQL.</p>
+		<p><a href="https://hackr.io/blog/best-programming-languages-to-learn">Read more</a></p>
 			
 	</article>
 	<article>
