--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 		<p> Your choice of which programming language to learn will depend on your career goals. For example, if you want to dive into machine learning and deep learning, then you shouldn’t be spending your time learning Java or C#. To help you make this decision, we’ll briefly go over some of the languages and what they’re used for.</p>
 		<p>Python and JavaScript, two of the most popular languages, are hot in the startup world. Many startups use Django (Python), Flask (Python), and NodeJS (JavaScript) as their backend frameworks. These are both easy-to-learn and therefore considered the best programming languages to learn for beginners. On top of that, there are several opportunities in the market for these roles.</p> 
 		<p>Java and PHP are commonly used in the corporate world. Many organizations use Spring (Java) and Codeigniter (PHP) as their web backend framework.</p>
-		<p>R and MATLAB have a large presence in the data analytics world. If you want to develop a career in data analytics or data science, these are the languages to learn. C/C++ and Golang are the top choices in building low-latency and scalable systems.</
+		<p>R and MATLAB have a large presence in the data analytics world. If you want to develop a career in data analytics or data science, these are the languages to learn. C/C++ and Golang are the top choices in building low-latency and scalable systems.</p>
 		<p>With this, hopefully you have an answer to the question of which programming language to learn. Your goal should be to settle on a language and work on projects that have relevance to your career goals. It’ll take effort, but it’s also very rewarding!</p>
-		<p> SQL does not make the list SQL.</p>
+		<p>SQL does not make the list SQL.</p>
 		<p><a href="https://hackr.io/blog/best-programming-languages-to-learn">Read more</a></p>
 			
 	</article>
