--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		<h4>With the growth of Information Technology, the volume of data produced each day is astonishing. You could say we are overwhelmed with data. And, what good is that data unless we can manage it and manipulate it and understand it? SQL helps us do just that.</h4>
 		
 		<h4>Berkley Extension</h4>
-		<h3>What SQL is used for:</h3>
+		<h5>What SQL is used for:</h5>
 		<ul>
 		<li>Database management</li> 
 		<li>Sales reports</li> 
@@ -107,7 +107,7 @@
 		<p>Java and PHP are commonly used in the corporate world. Many organizations use Spring (Java) and Codeigniter (PHP) as their web backend framework.</p>
 		<p>R and MATLAB have a large presence in the data analytics world. If you want to develop a career in data analytics or data science, these are the languages to learn. C/C++ and Golang are the top choices in building low-latency and scalable systems.</p>
 		<p>With this, hopefully you have an answer to the question of which programming language to learn. Your goal should be to settle on a language and work on projects that have relevance to your career goals. It’ll take effort, but it’s also very rewarding!</p>
-		<p>SQL does not make the list SQL.</p>
+		<p>SQL does not make the list.</p>
 		<p><a href="https://hackr.io/blog/best-programming-languages-to-learn">Read more</a></p>
 			
 	</article>
