--- a/index.html
+++ b/index.html
@@ -92,10 +92,11 @@
 		<h4>Codesight</h4>
 		<p>The advantages of learning SQL are:</p>
 		<ul>
-		<li>it's a universal language</li> 
-		<li>it's open source - easy to learn, use</li> 
-		<li>it can be used to manage millions of rows of data</li>
-		<li>technology evolution - every PC or individual with access to some kind of mechanical device eventually touches SQL</li>
+		<li>It's a universal language</li> 
+		<li>It's open source - easy to learn, use</li> 
+		<li>It can be used to manage millions of rows of data</li>
+		<li>It's part of the technology evolution - every PC or individual with access to some kind of mechanical device eventually touches SQL</li>
+		<li>It's high in demand</li>		
 		</ul>
 		<p>SQL is magnificently essential and valuable skill businesses desire. Almost every business has become digitized. Digital means data – data rises to databases, and, to be responsible to those databases, you require SQL. Read any business journal and you will see something about analytics or business intelligence (BI). As companies strive to accomplish more with their information, they will require more people with the skills to access and analyze that data. SQL is the key skill that empowers you to do that.</p>
 		<p><a href="https://codingsight.com/structured-query-language-importance-of-learning-sql/">Read more</a></p>
