--- a/code-compare/index.html
+++ b/code-compare/index.html
@@ -9,14 +9,7 @@
 <p>Which computer language is best? To learn more, follow the links below.
 test push    
 </p>
-    
-    
-<a href="group1/index.html">Group 1 prefers ...</a></br></br>
-<a href="group2/index.html">Group 2 prefers ...</a></br></br>
-<a href="group3/index.html">Group 3 prefers ...</a></br></br>
-<a href="group4/index.html">Group 4 prefers ...</a></br></br>
-<a href="group5/index.html">Group 5 prefers ...</a></br></br>
-<a href="bob/index.html">Bob prefers ...</a></br></br>
+    <p>im making a change to this file</P>
 
 
 </html>
