--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>IT 115 Group 2 Homepage</title>
     
-    <link href="css/styles2.css" type="text/css" rel="stylesheet">
+    <link href="styles.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
 <div id="wrapper">
 
 <header>
-	<img src="images/analytics-g9052c8901_1920_shallower_940x400.jpg " alt="blue code">
+	<img src="analytics-g9052c8901_1920_shallower_940x400.jpg " alt="blue code">
 	
 </header>
 
