--- a/index.html
+++ b/index.html
@@ -1,3 +1,34 @@
+Skip to content
+Search or jump to…
+Pull requests
+Issues
+Marketplace
+Explore
+ 
+@hamidnahli 
+rBrown6
+/
+Group-2-Project-Repository
+Public
+forked from rbunge-nsc/code-compare
+Code
+Pull requests
+3
+Actions
+Projects
+3
+Wiki
+Security
+Insights
+Group-2-Project-Repository/index.html
+@MimiSouthwood
+MimiSouthwood Update index.html
+Latest commit eafd6c8 4 days ago
+ History
+ 2 contributors
+@rBrown6@MimiSouthwood
+174 lines (138 sloc)  10.8 KB
+   
 <!doctype html>
 <html>
 <head>
@@ -130,8 +161,15 @@
 			
 	</article>
 	<article>
-		<h3 id="Hamid">Hamid's Language Choice</h3>
-		<p>Sample text</p>
+		<h3 id="Hamid">Hamid's Language Choice: Python</h3>
+		<p>These are few reason that makes python a great language to learn</p>
+        <ul>
+            <li>Super easy to learn and use</li>
+            <li>Dynamicallt typed</li>
+            <li>You can use python to build things in field (Science, astronomy, IOT, Machine Learning). Even a toaster in you house might be running with a python code.</li>
+            <li>Widly supported</li>
+            <li>Great community behind it</li>
+        </ul>
 	</article>
 	<article>
 		<h3 id="Nichelle">Nichelle's Language Choice: CSS</h3>
@@ -172,3 +210,16 @@
 
 </body>
 </html>
+© 2022 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
+Loading complete
