--- a/SuperlinterTest.html
+++ b/SuperlinterTest.html
@@ -1,4 +1,4 @@
-<html>
+
 <head>
 
 <title>Using a Form</title>
@@ -8,10 +8,9 @@
 function reveal(){
 var firstName = document.theForm.elements[0].value
 var middleInitial = document.theForm.elements[1].value
-var lastName = document.theForm.elements[2].value
-document.write("Thank you, " + firstName + " " + middleInitial + " " + lastName + ".")
+var lastName = document.theForm.elements[2]
+document.write("Thank you, " + firstName + " " + middleInitial + " " + lastName + "."
 }
-</script>
 
 </head>
 
