Update index.html with survey results

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ Latest commit eafd6c8 4 days ago
 	</article>
 	<article>
 		<h3 id="Jesse">Jesse's Favorite Language</h3>
-		<p>sample text</p>
+		<p>The language I choose is JavaScript!</p>
 	</article>
 	
 </main>  <!-- end of main -->
@@ -192,11 +192,29 @@ Latest commit eafd6c8 4 days ago
 <h2>Help Us Predict the Next Step in Software's Future!</h2>
 <h3>Take Our Survey!</h3>
 	<p>In addition to our research on preferred programming languages, we put together a survey to ask other IT students and faculty what they thought. Below, you'll find a link to the survey!</p> 
-
-	<p><a href="http://107.21.5.253/index.html">Click this link to take the Survey</a></p>
+	
+	<ul>We asked two questions:
+		<li>On a scale of 1 (not important) to 5 (very important), how important do you think each software language is TODAY?</li>
+		<li>On a scale of 1 (not important) to 5 (very important), how important do you think each software language in 10 years from now?</li>
+	
+	<p><a href="http://107.21.5.253/index.html">Click this link to take the Survey</a></p>	
 
 <h3>The Results!</h3>
-	<p>Once survey results are in, we'll post the results here. </p>
+	
+	<p>Here are the survey results:</p>
+	<ul>
+		<li>The top 5 for “today”: HTML, CSS, (Tableau), Python, JavaScript, C#</li>
+		<li>The top 5 for “in 5 years”: (Tableau), Python, JavaScript, Java, SQL, NoSQL</li>
+		<li>Python, Rust, Perl, (and Tableau) had greater scores for “in 5 years,” than “today”</li>
+		<li>The scores for “today” were higher on average at 3.46 vs “in 5 years” with 3.01</li>
+		<li>Most growth predicted: Java, SQL and NoSQL all +4</li>
+		<li>Biggest drops predicted: HTML, -11; CSS, -5, C# -5</li>
+	</ul>
+	
+	<p>Thank you to everyone who participated in the survey!</p>
+	
+	
+	
 
 </aside>
 	
