--- a/index.html
+++ b/index.html
@@ -191,24 +191,24 @@ Latest commit eafd6c8 4 days ago
 	
 <h2>Help Us Predict the Next Step in Software's Future!</h2>
 <h3>Take Our Survey!</h3>
-	<p>In addition to our research on preferred programming languages, we put together a survey to ask other IT students and faculty what they thought. Below, you'll find a link to the survey!</p> 
+	<p>In addition to our research on preferred programming languages, we put together a survey to ask other IT students and faculty what they thought. Below, you'll find a link to the survey.</p> 
 	
 	<ul>We asked two questions:
 		<li>On a scale of 1 (not important) to 5 (very important), how important do you think each software language is TODAY?</li>
-		<li>On a scale of 1 (not important) to 5 (very important), how important do you think each software language in 10 years from now?</li>
+		<li>On a scale of 1 (not important) to 5 (very important), how important do you think each software language will be in 10 years?</li>
 	
-	<p><a href="http://107.21.5.253/index.html">Click this link to take the Survey</a></p>	
+	<p><a href="http://107.21.5.253/index.html">Click this link to view the Survey</a></p>	
 
 <h3>The Results!</h3>
 	
 	<p>Here are the survey results:</p>
 	<ul>
-		<li>The top 5 for “today”: HTML, CSS, (Tableau), Python, JavaScript, C#</li>
-		<li>The top 5 for “in 5 years”: (Tableau), Python, JavaScript, Java, SQL, NoSQL</li>
+		<li>The top 5 languages for “today”: HTML, CSS, (Tableau), Python, JavaScript, C#</li>
+		<li>The top 5 languages for “in 5 years”: (Tableau), Python, JavaScript, Java, SQL, NoSQL</li>
 		<li>Python, Rust, Perl, (and Tableau) had greater scores for “in 5 years,” than “today”</li>
 		<li>The scores for “today” were higher on average at 3.46 vs “in 5 years” with 3.01</li>
-		<li>Most growth predicted: Java, SQL and NoSQL all +4</li>
-		<li>Biggest drops predicted: HTML, -11; CSS, -5, C# -5</li>
+		<li>Languages with higher rankings in 5 years: Java, SQL and NoSQL, all with +4</li>
+		<li>Languages with lower rankings in 5 years: HTML, -11; CSS, -5, C# -5</li>
 	</ul>
 	
 	<p>Thank you to everyone who participated in the survey!</p>
