Added JavaScript Section

--- a/index.html
+++ b/index.html
@@ -182,8 +182,22 @@ Latest commit eafd6c8 4 days ago
 	</article>
 	<article>
 		<h3 id="Jesse">Jesse's Favorite Language</h3>
-		<p>The language I choose is JavaScript!</p>
-	</article>
+		<p>JavaScript was created by Brendan Eich at Netscape in 1995 to enhance web-pages. Before JavaScript web-pages were static with no dynamic elements.<br>
+<br>Here is an example of a dynamic element</p>
+		<table id = "myTable" style="border: 10px solid red; font-size: 20px; font-weight: bold">
+<tr id = "row1" style = "color: blue" >
+<td id = "1.1" style = "border: 2px solid black">Row 1 Col 1</td>
+<td id = "1.2" style = "border: 2px solid black">Row 1 Col 2</td>
+</tr>
+</table>
+
+<!--Buttons to Launch a Functions -->
+<button type="submit" onclick = "changeTextColor()">Change Text Color</button>
+<button type="submit" onclick = "changeBorderSize()">Change Cell Border Size</button>
+<button type="submit" onclick = "changeTableColor()">Change Table Color</button>
+<button type="submit" onclick = "changeTableBold()">Change Font Boldness</button>
+<br><br><p>You can see how powerful JavaScript can be in making a website dyanmic, and unsurprisingly it is now used in over 97% of websites. JavaScript is a great beginner language, and is ranked as one of the most in demand languages consistently. If your going in to web development, Javascript is necessary to learn, and it doesn't appear to be going anywhere anytime soon. 
+</article>
 	
 </main>  <!-- end of main -->
 
@@ -221,7 +235,50 @@ Latest commit eafd6c8 4 days ago
 <footer>
 	
 </footer>
+	
+<script>
 
+// First JavaScript Function
+// Changes text color from blue to green and back again
+function changeTextColor(){
+var textcolor = document.getElementById("row1").style.color;
+if (textcolor== "green"){textcolor = "blue";}
+else{textcolor = "green";}
+document.getElementById("row1").style.color = textcolor;
+}
+
+// Second JavaScript Function
+// Changes Border Size
+function changeBorderSize(){
+var borderSize = document.getElementById("1.1").style.border;
+
+if (borderSize == "2px solid black"){borderSize = "4px solid black";}
+else{borderSize = "2px solid black";}
+document.getElementById("1.1").style.border = borderSize;
+document.getElementById("1.2").style.border = borderSize
+}
+
+// Third JavaScript Function
+// Changes Table Color
+function changeTableColor(){
+var tableColor = document.getElementById("myTable").style.border;
+
+if (tableColor == "10px solid red"){tableColor = "10px solid green";}
+else{tableColor = "10px solid red";}
+document.getElementById("myTable").style.border = tableColor;
+}
+
+// Fourth JavaScript Function
+// Changes Text Boldness
+function changeTableBold(){
+var tableBold = document.getElementById("myTable").style.fontWeight;
+
+if (tableBold == "bold"){tableBold = "normal";}
+else{tableBold = "bold";}
+document.getElementById("myTable").style.fontWeight = tableBold;
+}
+
+</script>
  
 
 </div> <!-- end of div wrapper -->
